2009-03-24  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.exports: Add gperl_option_context_get_type and
	gperl_option_group_get_type to the export list so that dependent
	modules link correctly on MSWin32.  Patch by Martin
	Schlemmer.  (GNOME #576372)

2009-03-24  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/h.t: Correct a skip count.  Patch by Stefan B.  (RT #44428)

2009-03-19  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Space-separate the libs and cflags strings from
	gobject and gthread to avoid unwanted concatenation.  Patch by
	Daniel Macks.  (RT #44055)

2009-03-19  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* MakeHelper.pm (postamble_docs_full): Use qq// instead of qq{} to
	quote the copyright string in order to avoid problems with dmake.
	Patch by Martin Schlemmer.  (GNOME #573099)

2009-03-17  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* Makefile.PL
	* NEWS
	* README: Stable release 1.220.

2009-03-08  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.214.

2009-03-08  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GClosure.xs (gperl_callback_invoke): Fix a giant leak by
	properly unsetting all GValues used for the callback arguments.
	Patch by Kevin Ryde.

2009-03-08  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GenPod.pm (xsub_to_pod): Don't wrap the argument types of xsubs
	with a superfluous pair of '=over' and '=back'.

2009-03-08  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GenPod.pm (podify_enums_and_flags): Don't generate 'ENUMS AND
	FLAGS' entries for Glib::Enum and Glib::Flags since they don't
	have values anyway.

2009-03-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/7.t
	* GSignal.xs (gperl_signal_connect): Don't leak the GClosure
	object when an invalid signal name is passed in.  Patch by
	Kevin Ryde.

2009-03-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GType.xs (gperl_fundamental_type_from_obj): Check the SV for